<resources>
    <string name="app_name">Hambriento</string>

    <string name="colorDialog" translatable="false">#A5DC86</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--GPS Texts-->
    <string name="cancel">cancel</string>
    <string name="gbs_title">GPS Settings</string>
    <string name="gbs_setting"> Do you want to enable GPS ?</string>
    <string name="gbs_detect_progress">Gps detecting you location ...</string>
    <string name="GPs_disapled">GPS is disabled please enable it</string>
    <string name="enable">enable</string>
    <string name="GPS">alert</string>
    <string name="Gps_Description">ِDo you want to allow Gps Detecting service ?</string>
    <string name="Gps_title">GPS Settings</string>
    <string name="location_permission_asking">Allow Location Permission to can use this app</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="restaurant_rating">Restaurant Rating :</string>
    <string name="online_delivery">Online Delivery :</string>
    <string name="address">Address :</string>
    <string name="description">Description :</string>
    <string name="available">Available</string>
    <string name="unavailable">Un Available</string>
    <string name="there_is_no_favorite_for_you">There is no favorite for you</string>
    <string name="login">Login</string>
    <string name="sorry_there_is_no_restaurants_for_this_cuisine">Sorry there is no restaurants for this cuisine</string>
    <string name="user_name">User Name</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="logout">Logout</string>
    <string name="exit2">to exit from Hambriento ?</string>
    <string name="exit1">Do you want</string>
    <string name="exit3">Exit</string>
    <string name="not_available">Not Available</string>
    <string name="location_not_available_for_this_restaurant">Location Not Available For This Restaurant</string>
    <string name="votes">  Votes</string>
    <string name="restaurant_remove_msg">Restaurant removed from your favorites</string>
    <string name="restaurant_add_msg">Restaurant added to your favorites</string>
    <string name="loading">loading ....</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="rating">Rating :</string>
    <string name="res_img_con_des">restaurant image</string>
    <string name="you_have_no_restaurants_in_your_favorite_to_add_it_to_your_home_screen">You have no restaurants in your favorite to add it to your home screen</string>
    <string name="back_arrow_to_back_on_previous_activity">back arrow to back on previous activity</string>
    <string name="city">City :</string>
    <string name="user_image">User Image</string>
    <string name="cuisine_img">Cuisine image</string>
    <string name="navigation_menu">Navigation menu</string>
    <string name="enjoy_with_eating">Enjoy with eating</string>
    <string name="enable_location_to_find_nearest_restaurants">Enable location to find nearest restaurants</string>
    <string name="menu">Menu :</string>
    <string name="check_connection">Check Internet Connection</string>
</resources>
