<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/title_toolbar" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hundred_fifty"
                android:scaleType="centerCrop"
                android:contentDescription="@string/res_img_con_des"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:srcCompat="@drawable/restaurant" />


            <TextView
                android:id="@+id/tv_rating_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/eight"
                android:fontFamily="@font/alegreya_sans_sc_medium_italic"
                android:text="@string/restaurant_rating"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/tv_online_delivery_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/hundred_ten"
                android:fontFamily="@font/alegreya_sans_sc_medium_italic"
                android:text="@string/online_delivery"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating_lbl" />

            <TextView
                android:id="@+id/tv_address_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/sixteen"
                android:fontFamily="@font/alegreya_sans_sc_medium_italic"
                android:text="@string/address"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_online_delivery_lbl" />

            <RatingBar
                android:id="@+id/rb_restaurant"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                android:layout_width="@dimen/hundred_seventy_eight"
                android:layout_height="@dimen/thirty_two"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/eight"
                android:numStars="5"
                android:progressTint="@color/colorPrimaryDark"
                android:rating="2"
                android:stepSize="1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_rating_lbl"
                app:layout_constraintStart_toEndOf="@+id/tv_rating_lbl"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/tv_desc_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/thirty_two"
                android:fontFamily="@font/alegreya_sans_sc_medium_italic"
                android:text="@string/city"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_address" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/zero"
                android:layout_marginEnd="@dimen/eight"
                android:layout_marginTop="@dimen/sixteen"
                android:fontFamily="@font/alegreya_sans_sc_medium_italic"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_address_lbl"
                app:layout_constraintTop_toBottomOf="@+id/tv_address_lbl"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_online_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/forty_four"
                android:fontFamily="@font/alegreya_sans_sc_medium_italic"
                android:text="@string/available"
                android:textColor="@android:color/holo_green_light"
                android:textSize="@dimen/text_medium"
                app:layout_constraintBottom_toBottomOf="@+id/tv_online_delivery_lbl"
                app:layout_constraintStart_toEndOf="@+id/tv_online_delivery_lbl"
                app:layout_constraintTop_toTopOf="@+id/tv_online_delivery_lbl" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:fontFamily="@font/alegreya_sans_sc_medium_italic"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toEndOf="@+id/tv_desc_lbl"
                app:layout_constraintTop_toTopOf="@+id/tv_desc_lbl"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_rating_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen"
                android:fontFamily="@font/alegreya_sans_sc_medium_italic"
                tools:text="Good"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="@+id/rb_restaurant"
                app:layout_constraintTop_toBottomOf="@+id/rb_restaurant" />

            <TextView
                android:id="@+id/tv_vote_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen"
                android:fontFamily="@font/alegreya_sans_sc_medium_italic"
                tools:text="20 votes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="@+id/tv_rating_txt"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating_txt" />

            <TextView
                android:id="@+id/tv_menu_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/forty_five"
                android:fontFamily="@font/alegreya_sans_sc_medium_italic"
                android:text="@string/menu"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_lbl" />

            <ImageView
                android:id="@+id/iv_restaurant_menu"
                android:layout_width="@dimen/forty_four"
                android:layout_height="@dimen/thirty_three"
                android:layout_marginStart="@dimen/twenty"
                android:contentDescription="@string/menu"
                app:layout_constraintStart_toEndOf="@+id/tv_menu_lbl"
                app:layout_constraintTop_toTopOf="@+id/tv_menu_lbl"
                app:srcCompat="@drawable/browser" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>